--- a/index.html
+++ b/index.html
@@ -1,20 +1,60 @@
-<html>
-    <head>
-        <title>Olá, eu sou a cabeça</title>
-    </head>
-    <body>
-        <h1>h1 Eu sou o corpo</h1>
-        <h2>h2 Eu sou o corpo</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jonathan Segundo CV</title>
 
-        <ol>
-            <li>Cafe</li>
-            <li>Cha</li>
-            <li>Leite</li>
-        </ol>
-        <ul>
-            <li>Cafe</li>
-            <li>Cha</li>
-            <li>Leite</li>
-        </ul>
-    </body>
+    <link rel="stylesheet" href="style.css">
+
+</head>
+<body>
+    <main class="resume-contents">
+        
+        <section class="left-section">
+            <section class="left-section-contents">
+                <div class="profile">
+                    <img class="profile-image" src="./img/profile-image.png" alt="Profile image">
+                    <p class="name">Jonathan Segundo</p>
+                    <p class="profession">Front-end developer</p>
+                </div>
+
+                <div class="contact-info">
+                    <p class="left-title">Contato</p>
+                    <ul>
+                        <li><i class="fa fa-phone"></i>+55 11 99999-1111</li>
+                        <li><i class="fa fa-envelope"></i>me@mail.com</li>
+                        <li><i class="fa fa-globe"></i>www.devfrontend.com</li>
+                        <li><i class="fa fa-github"></i>jonthandev</li>
+                    </ul>
+                </div>
+
+                <div class="skills">
+                    <p class="left-title">Skills</p>
+                    <ul>
+                        <li><p>HTML5 & CSS3</p></li>
+                        <li><p>JAVASCRIPT, VUEJS</p></li>
+                        <li><p>GIT & GITHUB</p></li>
+                        <li><p>JAVASCRIPT, VUEJS</p></li>
+                        <li><p>JAVA</p></li>
+                    </ul>
+                </div>
+            </section>
+        </section>
+
+        <section class="right-section">
+            <div class="right-section-contents">
+                <section class="about gap">
+                    <div class="right-title">Sobre Mim</div>
+                    <p class="about-me-contents">
+                        Software Engineer and community contributor (open source repositories), Distributed Systems, and Functional Programming passionate.<br>
+                        <br>Experienced with cloud providers such as AWS, Google Cloud Platform.
+                        Over the past years, my main language is Python acting as a Software Engineer also as an Architect.
+                    </p>
+                </section>
+            </div>
+        </section>
+    </main>
+</body>
 </html>
