--- a/index.html
+++ b/index.html
@@ -54,6 +54,32 @@
                     </p>
                 </section>
             </div>
+
+            <section class="experience gap">
+                <div class="right-title">Experiencia</div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 01</p>
+                        <p class="exp-time-period">2021-Present</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Engenheiro Front-end</p>
+                        <p class="exp-desc">
+                            Descreva aqui principais atividades da empresa 01
+                        </p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-company-name">Empresa 02</p>
+                        <p class="exp-time-period">2018-2021</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Engenheiro Front-end</p>
+                        <p class="exp-desc">
+                            Descreva aqui principais atividades da empresa 02
+                        </p>
+                    </div>
+                </div>
+            </section>
         </section>
     </main>
 </body>
