--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jonathan Segundo CV</title>
 
+    <!-- Google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap" rel="stylesheet">
+
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -53,9 +62,8 @@
                         Over the past years, my main language is Python acting as a Software Engineer also as an Architect.
                     </p>
                 </section>
-            </div>
-
-            <section class="experience gap">
+                
+                <section class="experience gap">
                 <div class="right-title">Experiencia</div>
                 <div class="experience-contents">
                     <div class="exp-left">
@@ -105,7 +113,7 @@
                     </div>
                 </div>
             </section>
-
+            
             <section class="awards gap">
                 <div class="right-title">Cursos</div>
                 <div class="awards-contents">
@@ -131,6 +139,7 @@
                     </div>
                 </div>
             </section>
+        </div>
         </section>
     </main>
 </body>
